--- a/css/index_main.css
+++ b/css/index_main.css
@@ -396,3 +396,12 @@ footer {
 		padding-right: 0;
 	}
 }
+@media (max-width:360px) {
+	div.zerobg{
+		width: 120%;
+	}
+	div.input>div.readerBooks>a>img {
+		width: 8rem;
+		margin-top: 0;
+	}
+}
