--- a/css/index_main.css
+++ b/css/index_main.css
@@ -355,6 +355,9 @@ footer {
 }
 
 @media (max-width:480px) {
+	body{
+		overflow-x: hidden;
+	}
 	div.link>ul.linkPic>li {
 		/* 	display: block; */
 		width: 18rem;
@@ -410,5 +413,16 @@ footer {
 
 	footer {
 		width: 100%;
+	}
+}
+@media (max-width:400px) {
+	div.zerobg{
+		width: 105%;
+	}
+	div.input>div.readerBooks>a>img {
+		width: 8.5rem;
+		margin: 0;
+		margin-bottom: 2rem;
+		padding: 0;
 	}
 }
