--- a/CSS1/test_index_main.css
+++ b/CSS1/test_index_main.css
@@ -638,6 +638,14 @@ footer{
 		
 	}
 }
+@media (max-width:480px){
+	.readerBooks > .BooksOne{
+		width: 95%;
+		position: absolute;
+		top: 1800px;	
+		
+	}
+}
 @media (max-width:375px) {
 	body{
 		overflow-x: hidden;
