--- a/CSS1/test_index_main.css
+++ b/CSS1/test_index_main.css
@@ -576,7 +576,7 @@ footer{
 	body{
 		overflow-x: hidden;
 		background: url(https://uploadfile.bizhizu.cn/up/17/68/d9/1768d9a10559ae82f1b6f6d9e003f667.jpg) no-repeat;
-		background-size: 100%;
+		background-size: 105%;
 	}
 	.main_top{
 		position: absolute;
@@ -644,7 +644,10 @@ footer{
 	body{
 		overflow-x: hidden;
 		background: url(https://uploadfile.bizhizu.cn/up/17/68/d9/1768d9a10559ae82f1b6f6d9e003f667.jpg) no-repeat;
-		background-size: 100%;
+		background-size: 105%;
+	}
+	.main_top{
+		opacity: 0;
 	}
 	.readerBooks > .BooksOne{
 		width: 95%;
@@ -657,7 +660,10 @@ footer{
 	body{
 		overflow-x: hidden;
 		background: url(https://uploadfile.bizhizu.cn/up/17/68/d9/1768d9a10559ae82f1b6f6d9e003f667.jpg) no-repeat;
-		background-size: 100%;
+		background-size: 105%;
+	}
+	.main_top{
+		opacity: 0;
 	}
 	.readerBooks > .BooksOne{
 		width: 95%;
@@ -670,7 +676,10 @@ footer{
 	body{
 		overflow-x: hidden;
 		background: url(https://uploadfile.bizhizu.cn/up/17/68/d9/1768d9a10559ae82f1b6f6d9e003f667.jpg) no-repeat;
-		background-size: 100%;
+		background-size: 105%;
+	}
+	.main_top{
+		opacity: 0;
 	}
 	.readerBooks > .BooksOne{
 		width: 95%;
@@ -683,12 +692,13 @@ footer{
 	body{
 		overflow-x: hidden;
 		background: url(https://uploadfile.bizhizu.cn/up/17/68/d9/1768d9a10559ae82f1b6f6d9e003f667.jpg) no-repeat;
-		background-size: 100%;
+		background-size: 105%;
 	}
 	.main_top{
 		position: absolute;
 		left: 30%;
 		top: 20%;
+		opacity: 0;
 	}
 	div.main_bottom{
 		opacity: 0;
