--- a/CSS1/test_index_main.css
+++ b/CSS1/test_index_main.css
@@ -576,12 +576,13 @@ footer{
 	body{
 		overflow-x: hidden;
 		background: url(https://uploadfile.bizhizu.cn/up/17/68/d9/1768d9a10559ae82f1b6f6d9e003f667.jpg) no-repeat;
-		background-size: 105%;
+		background-size: 110%;
 	}
 	.main_top{
 		position: absolute;
 		left: 30%;
 		top: 20%;
+		opacity: 0;
 	}
 	div.main_bottom{
 		opacity: 0;
@@ -644,7 +645,7 @@ footer{
 	body{
 		overflow-x: hidden;
 		background: url(https://uploadfile.bizhizu.cn/up/17/68/d9/1768d9a10559ae82f1b6f6d9e003f667.jpg) no-repeat;
-		background-size: 105%;
+		background-size: 110%;
 	}
 	.main_top{
 		opacity: 0;
@@ -660,7 +661,7 @@ footer{
 	body{
 		overflow-x: hidden;
 		background: url(https://uploadfile.bizhizu.cn/up/17/68/d9/1768d9a10559ae82f1b6f6d9e003f667.jpg) no-repeat;
-		background-size: 105%;
+		background-size: 110%;
 	}
 	.main_top{
 		opacity: 0;
@@ -676,7 +677,7 @@ footer{
 	body{
 		overflow-x: hidden;
 		background: url(https://uploadfile.bizhizu.cn/up/17/68/d9/1768d9a10559ae82f1b6f6d9e003f667.jpg) no-repeat;
-		background-size: 105%;
+		background-size: 110%;
 	}
 	.main_top{
 		opacity: 0;
@@ -692,7 +693,7 @@ footer{
 	body{
 		overflow-x: hidden;
 		background: url(https://uploadfile.bizhizu.cn/up/17/68/d9/1768d9a10559ae82f1b6f6d9e003f667.jpg) no-repeat;
-		background-size: 105%;
+		background-size: 110%;
 	}
 	.main_top{
 		position: absolute;
