--- a/css/top.css
+++ b/css/top.css
@@ -13,15 +13,15 @@ div.top:hover {
 	background-color: white;
 }
 
-div.top>h1 {
+div.top>h1>a {
 	margin-left: 1rem;
 	float: left;
-	line-height: 4rem;
+	line-height: 2rem;
 	color: #666666;
 	transition: color 0.5s;
 }
 
-div.top>h1:hover {
+div.top>h1>a:hover {
 	color: deepskyblue;
 }
 
