--- a/CSS1/firstword.css
+++ b/CSS1/firstword.css
@@ -41,6 +41,7 @@ header > p{
 	color: white;
 	text-shadow: 0.0625rem 0.0625rem 0.0625rem black;
 	margin-left: 0.2rem;
+	font-size: .25rem;
 }
 main{
 	width: 50%;
@@ -57,4 +58,62 @@ main > img{
 	opacity: 0.5;
 	font-size: 0.15rem;
 	text-align: center;
+}
+@media (max-width:1200px) {
+	h1{
+		margin-top: 0.3rem;
+	}
+	.top_right{
+		margin-top: -.3rem;
+	}
+	#btn{
+		opacity: 0;
+	}
+}
+@media (max-width:992px) {}
+@media (max-width:768px) {
+	.top_right{
+		margin-top: -0.5rem;
+	}
+}
+@media (max-width:480px) {
+	.top_right{
+		margin-top: -1rem;
+	}
+	header{
+		width: 100%;
+		height: 5rem;
+	}
+	header > h1{
+		font-size: 1rem;
+		margin-top: 1.6rem;
+	}
+	header > a{
+		margin-left: .6rem;
+		width: 1rem;
+		height: 1rem;
+		margin-top: -0.3rem;
+	}
+	header > a > .img{
+		width: 1rem;
+		height: 1rem;
+		background-position: -0.9rem -0.7rem;
+	}
+	main{
+		width: 90%;
+		height: 100%;
+	}
+	main > p{
+		font-size: .7rem;
+	}
+	main > img{
+		width: 15rem;
+		margin-left: 6%;
+	}
+	main > #PicText{
+		font-size: .5rem;
+		margin-top: .2rem;
+		color: #666666;
+		font-weight: bolder;
+	}
 }
