--- a/CSS1/test_index_main.css
+++ b/CSS1/test_index_main.css
@@ -494,6 +494,8 @@ div.link>p {
 	padding: 5%;
 	border-radius: 15% 15% 0 0;
 	margin-top: 5%;
+	padding-left: 20%;
+	padding-right: 20%;
 }
 
 div.upto>p {
